@@ -2,6 +2,12 @@
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_focus):
+	Changes in the pattern
+
+2007-11-08  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_focus):
 	* engines/clearlooks/src/clearlooks_style.c:
 	(clearlooks_style_draw_focus):
 	Comments and non-breaking things
